tests/ui/parser/issues/issue-89971-outer-attr-following-inner-attr-ice.stderr
error: an inner attribute is not permitted in this context
  --> $DIR/issue-89971-outer-attr-following-inner-attr-ice.rs:12:1
   |
LL | #![deny(missing_docs)]
   | ^^^^^^^^^^^^^^^^^^^^^^
...
LL | struct Mew();
   | ------------- the inner attribute doesn't annotate this struct
   |
   = note: inner attributes, like `#![no_std]`, annotate the item enclosing them, and are usually found at the beginning of source files
help: to annotate the struct, change the attribute from inner to outer style
   |
LL - #![deny(missing_docs)]
LL + #[deny(missing_docs)]
   |

error: aborting due to 1 previous error

